[gd_scene load_steps=29 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://White.shader" type="Shader" id=9]
[ext_resource path="res://Enemies/Batter.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "strong",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=10]
resource_local_to_scene = true
radius = 76.0

[sub_resource type="CircleShape2D" id=11]
radius = 5.0

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( -8, -24 )
frames = SubResource( 7 )
playing = true
centered = false

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0
INVINCIBILITY_DURATION = 0.3

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 9 )

[node name="Timer" parent="Hurtbox" index="1"]
one_shot = true

[node name="Stats" parent="." instance=ExtResource( 5 )]
health = 2

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.509804 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -14 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="Blink" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 12 )
anims/Stop = SubResource( 13 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_finished" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_finished"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="target_position_changed" from="WanderController" to="." method="_on_WanderController_target_position_changed"]

[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="Hitbox"]
